--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,34 +3,30 @@ name: Node CI
 on: [push]
 
 jobs:
-      - uses: actions/upload-artifact@master
-    needs: build
-          name: webpack artifacts
-          path: public/
-
+  build:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-2016]
+        node-version: [12.x, 14.x]
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: npm install and build webpack
         run: |
           npm install
           npm run build
+      - uses: actions/upload-artifact@main
+        with:
+          name: webpack artifacts
+          path: public/
 
   test:
-    - uses: actions/download-artifact@main
-      with:
-        name: webpack artifacts
-        path: public
-    - name: npm install, and test
-    runs-on: ubuntu-latest
-
-    strategy:
+   strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
         node-version: [12.x, 14.x]
-
-    steps:
+   runs-on: ubuntu-latest
+   steps:  
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
@@ -42,3 +38,7 @@ jobs:
         npm test
       env:
         CI: true
+    - uses: actions/download-artifact@main
+      with:
+        name: webpack artifacts
+        path: public
