--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,12 +21,13 @@ jobs:
           path: public/
 
   test:
+   needs: build
    strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
         node-version: [12.x, 14.x]
    runs-on: ubuntu-latest
-   steps:  
+   steps:
     - uses: actions/download-artifact@main
       with:
         name: webpack artifacts
