--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,6 +5,9 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node_version: ['12x', '14x']
     steps:
       - uses: actions/checkout@v2
       - name: npm install and build webpack
@@ -19,6 +22,9 @@ jobs:
   test:
    needs: build
    runs-on: ubuntu-latest
+   strategy:
+      matrix:
+        node_version: ['12x', '14x']
    steps:
     - uses: actions/checkout@v2
     - uses: actions/download-artifact@main
